--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,11 +58,9 @@
   </script>
 </head>
 <body>
-  <div id="app">
-    <div>{{ content }}</div>
-    {% include gallery.html %}
-    {% include posts.html %}
-  </div>
+  {{ content }}
+  {% include gallery.html %}
+  {% include posts.html %}
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-MVB3SC8YVX"></script>
   <script>
