--- a/css/main.scss
+++ b/css/main.scss
@@ -248,7 +248,7 @@ mark {
     .bdhs {
       font-size: 80%;
       width: 320px;
-      padding: 20px;
+      padding: 55px 20px 20px;
       box-sizing: border-box;
       float: right;
     }
