--- a/css/main.scss
+++ b/css/main.scss
@@ -35,7 +35,7 @@ pre {
   width: 100%;
   padding: 28px 10px 10px;
   margin: 0;
-  font-family: menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
+  font-family: 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
   font-size: 18px;
   line-height: 1.125;
   white-space: pre;
@@ -57,12 +57,6 @@ a {
 
 abbr {
   cursor: help;
-}
-
-code, .code {
-  font-family: menlo, consolas, helvetica, arial, sans-serif;
-  font-size: 85%;
-  letter-spacing: -0.025rem;
 }
 
 dfn {
