更新产品信息

--- a/_includes/tofu/product/b/b.html
+++ b/_includes/tofu/product/b/b.html
@@ -1,8 +1,2 @@
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><em class="hot"><abbr  title="热销">热</abbr></em><div class="collapse-body">
-│   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
-│   │ ├ 成分：黄豆<sub>非转</sub>、饮用水、菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
-│   │ │ └ 保鲜期：4～2℃冷藏达5～7天，必要时可冷冻存储。</div></div>
-│   │ └ 袋装<sub class="pic">（图片：<span class="gallery-open-btn" data-src="/assets/img/tofu/c/01.jpg" data-alt="袋装油豆腐" title="点击查看图片">1</span><span class="gallery-open-btn" data-src="/assets/img/tofu/c/02.jpg" data-alt="袋装油豆腐" title="点击查看图片">2</span><span class="gallery-open-btn" data-src="/assets/img/tofu/c/03.jpg" data-alt="袋装油豆腐" title="点击查看图片">3</span><span class="gallery-open-btn" data-src="/assets/img/tofu/c/04.jpg" data-alt="袋装油豆腐" title="点击查看图片">4</span>）</sub>
-│   │   ├ 重量：500克。
-│   │   └ 售价：14元/袋。
-│   │</div></div>
+│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><span class="muted">毛豆腐</span></span><div class="collapse-body">
+│   │ <span class="muted">└ 待研发...</span></div></div>
