--- a/css/main.scss
+++ b/css/main.scss
@@ -117,11 +117,22 @@ mark {
   top: -2px;
   margin-left: 4px;
   font-size: 65%;
-  font-style: normal;
 }
 
 .primary {
   color: red;
+}
+
+.primary abbr {
+  margin-right: 5px;
+}
+
+.primary abbr:first-child {
+  font-style: normal;
+}
+
+.primary abbr:last-child {
+  color: tomato;
 }
 
 .recommend {
