--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -3,7 +3,7 @@
   │ │ └ <em style="background-color: yellow;">敬请期待...</em></div></div>
   │ ├ 银桥（头铺村）
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
-  │   └ 我们只收产品钱，邮费需要自理。
+  │   └ 邮费需自理
   │     ├ 云南省<em class="new"><abbr title="">邮费适合</abbr></em>
   │     ├ 四川省<em class="new"><abbr title="">邮费适合</abbr></em>
   │     └ 其他省市及地区<em class="hot"><abbr title="">邮费较高</abbr></em>
