--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -4,5 +4,5 @@
 │   │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
 │   │ └ 盒装
 │   │   ├ 重量：见包装。
-│   │   └ 售价：见包装，按<mark>6元/500克</mark>称重计费。
+│   │   └ 建议零售价：统计中...。
 │   │</div></div>
