--- a/css/main.scss
+++ b/css/main.scss
@@ -4,44 +4,6 @@
 
 @charset "utf-8";
 
-body {
-  margin: 0;
-  font-family: simkai, kaiti, simsun, simhei, '等线', serif;
-  font-size: 18px;
-  letter-spacing: -1px;
-  line-height: 1;
-}
-
-.brand {
-  position: fixed;
-  z-index: 10000;
-  font-family: simsun, simkai, kaiti, simhei, '等线', serif;
-  text-indent: -10px;
-  width: 100%;
-  padding: 5px 10px;
-  background-color: white;
-  
-  sup {
-    font-size: 75%;
-  }
-}
-
-.tofu {
-  min-height: 300px;
-}
-
-pre {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 28px 10px 10px;
-  margin: 0;
-  font-family: 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
-  font-size: 18px;
-  line-height: 1.125;
-  white-space: pre;
-  overflow: scroll;
-}
-
 blockquote {
   display: inline;
   margin: 0;
@@ -50,19 +12,14 @@ blockquote {
 a {
   color: blue;
   text-decoration: none;
-  &.has-line {
-    border-bottom: 1px dotted;
-  }
+}
+
+a.has-line {
+  border-bottom: 1px dotted;
 }
 
 abbr {
   cursor: help;
-}
-
-dfn {
-  cursor: help;
-  font-style: normal;
-  text-decoration: underline dotted;
 }
 
 sup, sub {
@@ -79,27 +36,32 @@ sub {
   bottom: -4px;
 }
 
-q {
-  &:before {
-    content: "「";
-  }
+pre {
+  font: 16px/1.185 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
+  white-space: pre;
+  width: 100%;
+  padding: 25px 10px 10px;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.brand {
+  width: 100%;
+  background-color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 10000;
+}
   
-  &:after {
-    content: "」";
-  }
-}
-
-rt {
+.brand sub {
+  font-size: 80%;
+  font-family: simsun, simkai, kaiti, simhei, serif;
   position: relative;
-  bottom: -2px;
-  font-family: helvetica, arial, sans-serif;
-  letter-spacing: 0;
-  font-size: 60%;
+  bottom: 0;
 }
 
-mark {
-  background-color: beige;
-  font-style: italic;
+.tofu {
 }
 
 .no-ml {
@@ -112,185 +74,38 @@ mark {
 }
 
 .recommend, .primary, .hot, .new, .pic {
-  cursor: help;
+  font-size: 75%;
+  margin-left: 4px;
   position: relative;
   top: -2px;
-  margin-left: 4px;
-  font-size: 65%;
-}
-
-.primary {
-  color: red;
-}
-
-.primary abbr {
-  margin-right: 5px;
-}
-
-.primary abbr:first-child {
-  font-style: normal;
-}
-
-.primary abbr:last-child {
-  color: tomato;
-}
-
-.recommend {
-  color: gold;
-}
-
-.hot {
-  color: tomato;
-}
-
-.new {
-  color: lime;
-}
-
-.pic span {
-  padding: 0 3px;
 }
 
 .collapse {
   display: inline;
+}
   
-  .collapse-toggler {
-    cursor: pointer;
-    color: blue;
-    text-decoration: none;
+.collapse-toggler {
+  cursor: pointer;
+  color: blue;
+  text-decoration: none;
+}
     
-    &.active {
-      font-weight: bold;
-    }
-  }
+.collapse-toggler.active {
+  font-weight: bold;
+}
   
-  .collapse-body {
-    display: none/* inline */;
+.collapse-body {
+  display: none/* inline */;
+}
     
-    &.active {
-      display: inline;
-    }
-  }
+.collapse-body.active {
+  display: inline;
 }
 
 .gallery-open-btn {
-  cursor: pointer;
-  position: relative;
+  color: blue;
   margin-left: 2px;
   border-bottom: 1px dotted;
-  color: blue;
-}
-
-#gallery {
-  cursor: move;
-  display: none;
-  position: absolute;
-  z-index: 9999;
-  width: auto;
-  max-width: 600px;
-  background-color: white;
-  box-shadow: 10px 10px 50px rgba(0,0,0, .2);
-  
-  .close-btn {
-    cursor: pointer;
-    position: absolute;
-    right: 0;
-    background-color: black;
-    display: none;
-    span {
-      display: block;
-      padding: 8px;
-      color: #ccc;
-      font-size: 10px;
-      &:hover {
-        color: white;
-      }
-    }
-  }
-
-  .body {
-    overflow: hidden;
-    font-size: 0; /* remove the image gap */
-    .img {
-      width: 100%;
-    }
-  }
-}
-
-.map-open-btn {
+  position: relative;
   cursor: pointer;
-  border-bottom: 1px dotted;
-}
-
-.post {
-  &-container {
-    position: relative;
-    width: 100%; 
-    padding-top: 30px;
-  }
-  
-  &-content {
-    position: relative;
-    background-color: white;
-    padding: 0 15px;
-    box-sizing: border-box;
-    color: black;
-    line-height: 1.245;
-    text-align: left;
-    
-    #post {
-      max-width: 610px;
-    }
-    
-    .bdhs {
-      font-size: 80%;
-      width: 320px;
-      padding: 55px 20px 20px;
-      box-sizing: border-box;
-      float: right;
-    }
-    
-    h1, h2, h3, h4, h5, h6 {
-      margin-top: 0;
-      margin-bottom: 20px;
-      font-size: 22px;
-    }
-    
-    p {
-      margin: 20px 0;
-    }
-  }
-  
-  &-controls {
-    padding: 0 25px;
-    margin: 10px auto;
-    text-align: left;
-    button {
-      cursor: pointer;
-      border: none;
-      position: relative;
-      padding: 0;
-      background-color: transparent;
-      color: blue;
-      border-bottom: 1px dotted;
-    }
-    #loading1 {
-      background-color: black; 
-      color: white; 
-      font-size: 70%; 
-      padding: 0 5px; 
-      box-sizing: border-box;
-    }
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .post-container {
-    padding-top: 10px;
-  }
-  
-  .post-content .bdhs {
-    width: 100%;
-    float: none;
-  }
 }
