--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -1,18 +1,18 @@
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><span class="primary">主打/热销</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><span class="hot">🔥</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
 │ │ │ ├ 卤料：饮用水、老抽、八角、海盐<sub>无碘</sub>、白砂糖、味精。
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
-│ │ └ 袋装<sub class="pic">（<span class="gallery-open-btn" data-src="/assets/img/tofu/a/01.jpg" data-alt="袋装豆干" title="点击查看图片">图片</span>）</sub>
+│ │ └ 袋装
 │ │   ├ 重量：500克。
 │ │   └ 建议零售价：14.5元/袋。
 │ │</div></div>
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><span class="primary">主打/热销</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><span class="hot">🔥</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
 │ │ │ ├ 配料：菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天，必要时可冷冻存储。</div></div>
-│ │ └ 袋装<sub class="pic">（<span class="gallery-open-btn" data-src="/assets/img/tofu/b/01.jpg" data-alt="袋装油豆腐" title="点击查看图片">图片</span>）</sub>
+│ │ └ 袋装
 │ │   ├ 重量：500克。
 │ │   └ 建议零售价：17.3元/袋。
 │ │</div></div>
