--- a/_includes/tofu/product/index.html
+++ b/_includes/tofu/product/index.html
@@ -1,4 +1,4 @@
-├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">产品</span><sub class="pic">（<a href="/gallery.html" target="_blank">图库</a>）</sub><div class="collapse-body active">
+├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">产品</span><div class="collapse-body active">
 {% include tofu/product/a.html %}
 │ └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">其他</span><div class="collapse-body active">
 {% include tofu/product/b/a.html %}
