--- a/_includes/tofu/about.html
+++ b/_includes/tofu/about.html
@@ -1,6 +1,5 @@
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">关于</span><div class="collapse-body">
-│ ├ 常用名：布袋豆腐。
 │ ├ 生产商：大理市布袋食品加工坊。
 │ ├ 手机号：19542586219。
-│ └ 微信号：<span class="gallery-open-btn fontsize-normal no-ml" data-src="/assets/img/qrcode.png" data-alt="悟文的微信二维码" data-width="300px" title="点击查看二维码">bdspjgf</span>。
+│ └ 微信号：bdspjgf。
 │</div></div>
