--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -1,4 +1,4 @@
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">老豆腐</span><span class="recommend">推荐</span><div class="collapse-body">
+│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">老豆腐</span><div class="collapse-body">
 │   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │   │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
 │   │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
