--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -4,8 +4,8 @@
   │ ├ 银桥（头铺村）
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
   │   └ 邮费需自理
-  │     ├ 云南省<span class="new">邮费适合</span>
-  │     ├ 四川省<span class="new">邮费适合</span>
+  │     ├ 云南省
+  │     ├ 四川省
   │     └ 其他省市及地区<span class="hot">邮费较高</span>
   │       └ 需邮寄请与我们联系沟通。</div></div>
   │</div></div>
