--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,6 +72,7 @@
   body {
     font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
     font-size: 18px;
+    letter-spacing: -0.02em;
     line-height: 1.185;
     margin: 0;
   }
