--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -1,4 +1,4 @@
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
 │ │ │ ├ 卤料：饮用水、老抽、八角、海盐<sub>无碘</sub>、白砂糖、味精。
@@ -7,7 +7,7 @@
 │ │   ├ 重量：500克。
 │ │   └ 建议零售价：14.5元/袋。
 │ │</div></div>
-│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><div class="collapse-body">
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
 │ │ │ ├ 配料：菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
