--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -1,6 +1,6 @@
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
+  ├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">自营</span><div class="collapse-body active">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
-  │ │ └ <em style="background-color: yellow;">敬请期待...</em></div></div>
+  │ │ └ <em>暂无...</em></div></div>
   │ ├ 银桥（头铺村）
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
   │   └ 邮费需自理
