--- a/_includes/tofu/sales/b.html
+++ b/_includes/tofu/sales/b.html
@@ -1,4 +1,4 @@
-  └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">经销商</span><div class="collapse-body"> 
+  └ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">经销商</span><div class="collapse-body active"> 
     ├ 当前
     │ ├ 素方舟
     │ ├ 一沐坤（三塔路）
