更改自营点

--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -1,7 +1,7 @@
   ├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">自营</span><div class="collapse-body active">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
   │ │ └ <em>暂无...</em></div></div>
-  │ ├ 银桥（头铺村）
+  │ ├ 银桥（生产地）
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
   │   └ 邮费需自理
   │     ├ 云南省
