--- a/css/main.scss
+++ b/css/main.scss
@@ -58,6 +58,12 @@ pre {
 }
 
 .tofu {
+  background-color: white;
+  width: 100%;
+  max-width: 600px;
+  position: relative;
+  z-index: 1;
+  opacity: .9;
 }
 
 .muted {
