--- a/css/main.scss
+++ b/css/main.scss
@@ -58,9 +58,8 @@ pre {
 }
 
 .tofu {
+  display: inline-block;
   background-color: white;
-  width: 100%;
-  max-width: 600px;
   position: relative;
   z-index: 1;
   opacity: .9;
