--- a/css/main.scss
+++ b/css/main.scss
@@ -19,6 +19,7 @@ abbr {
 }
 
 sup, sub {
+  font-size: 85%;
   position: relative;
 }
 
@@ -32,13 +33,15 @@ sub {
   bottom: -4px;
 }
 
-pre {
-  font: 16px/1.185 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
-  white-space: pre;
-  width: 100%;
-  padding: 25px 10px 10px;
-  margin: 0;
-  box-sizing: border-box;
+.muted {
+  display: inline;
+  opacity: .4;
+}
+
+.recommend, .hot {
+  color: red;
+  position: relative;
+  top: -2px;
 }
 
 .brand {
@@ -49,32 +52,22 @@ pre {
   left: 0;
   z-index: 10000;
 }
-  
-.brand sub {
-  font-size: 80%;
-  font-family: simsun, simkai, kaiti, simhei, serif;
-  position: relative;
-  bottom: 0;
-}
 
 .tofu {
   display: inline-block;
+  padding: 20px 10px;
   background-color: white;
   position: relative;
   z-index: 1;
   opacity: .9;
 }
 
-.muted {
-  display: inline;
-  opacity: .4;
-}
-
-.recommend, .hot {
-  color: red;
-  font-size: 75%;
-  position: relative;
-  top: -2px;
+.tofu pre {
+  font-family: 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
+  white-space: pre;
+  width: 100%;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 .collapse {
