--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -1,4 +1,4 @@
-  ├ <div class="collapse"><span class="collapse-toggler active" data-toggle="collapse">自营</span><div class="collapse-body active">
+  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
   │ │ └ <em>暂无...</em></div></div>
   │ ├ 银桥（生产地）
