--- a/_includes/tofu/product/b/b.html
+++ b/_includes/tofu/product/b/b.html
@@ -1,2 +1,2 @@
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><span class="muted">毛豆腐</span></span><div class="collapse-body">
+│   ├ <div class="collapse"><span class="collapse-toggler muted" data-toggle="collapse">毛豆腐</span><div class="collapse-body">
 │   │ <span class="muted">└ 待研发...</span></div></div>
