--- a/_includes/tofu/sales/b.html
+++ b/_includes/tofu/sales/b.html
@@ -8,6 +8,6 @@
       └ 我们也期望在以下地区销售，有意者请与我们联系。<div class="muted">
         ├ 喜洲
         ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
-        │ └ 人民路/复兴路</div></div>
+        │ └ 人民路/复兴路</div></div> 
         └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">下关</span><div class="collapse-body">
-          └ 大关邑</div></div><!-- muted --></div></div></div>
+          └ 大关邑</div></div></div></div></div></div></div>
