--- a/_includes/tofu/product/b/c.html
+++ b/_includes/tofu/product/b/c.html
@@ -1,2 +1,2 @@
-│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><span class="muted">豆腐乳</span></span><div class="collapse-body">
+│   └ <div class="collapse"><span class="collapse-toggler muted" data-toggle="collapse">豆腐乳</span><div class="collapse-body">
 │     <span class="muted">└ 待研发...</span></div></div>
