--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -74,7 +74,7 @@
   }
   
   body {
-    font-family: 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
+    font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
     font-size: 14px;
     line-height: 1.185;
     margin: 0;
