--- a/css/main.scss
+++ b/css/main.scss
@@ -64,7 +64,7 @@ sub {
 }
 
 .tofu pre {
-  font-family: 'dejavu sans mono', menlo, consolas, 'source code pro', 'cascadia mono', simsun, simkai, kaiti, simhei, '等线', serif;
+  font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
   white-space: pre;
   width: 100%;
   margin: 0;
