--- a/css/main.scss
+++ b/css/main.scss
@@ -65,6 +65,7 @@ sub {
 
 .tofu pre {
   font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
+  font-size: 14px;
   white-space: pre;
   width: 100%;
   margin: 0;
