--- a/css/main.scss
+++ b/css/main.scss
@@ -65,7 +65,6 @@ sub {
 
 .tofu pre {
   font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
-  font-size: 14px;
   white-space: pre;
   width: 100%;
   margin: 0;
@@ -106,10 +105,14 @@ sub {
   cursor: pointer;
 }
 
+.on-mobile {
+  font-size: 18px;
+}
+
 .on-mobile .tofu {
   min-width: 100%;
 }
 
 .on-mobile .tofu pre {
-  font-size: 14px;
+  font-size: 18px;
 }
