--- a/css/main.scss
+++ b/css/main.scss
@@ -106,6 +106,7 @@ sub {
 }
 
 .on-mobile {
+  font-size: 16px;
 }
 
 .on-mobile .tofu {
@@ -113,4 +114,5 @@ sub {
 }
 
 .on-mobile .tofu pre {
+
 }
