--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -71,7 +71,8 @@
   html, body {
     height: 100%;
     margin: 0;
-    text-size-adjust: none;
+    -webkit-text-size-adjust: 100%;
+    text-size-adjust: 100%;
   }
   
   body {
