--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -1,6 +1,6 @@
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">豆干</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
-│ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
+│ │ │ ├ 成分：黄豆<sub>非转基因</sub>、饮用水。
 │ │ │ ├ 卤料：饮用水、老抽、八角、海盐<sub>无碘</sub>、白砂糖、味精。
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
 │ │ └ 袋装
@@ -9,8 +9,8 @@
 │ │</div></div>
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
-│ │ │ ├ 成分：黄豆<sub>非转</sub>、饮用水。
-│ │ │ ├ 配料：菜籽油<sub>非转</sub>、海盐<sub>无碘</sub>。
+│ │ │ ├ 成分：黄豆<sub>非转基因</sub>、饮用水。
+│ │ │ ├ 配料：菜籽油<sub>非转基因</sub>、海盐<sub>无碘</sub>。
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天，必要时可冷冻存储。</div></div>
 │ │ └ 袋装
 │ │   ├ 重量：500克。
