--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -4,5 +4,5 @@
 │   │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
 │   │ └ 盒装<sub>暂未上市</sub>
 │   │   ├ 重量：见包装。
-│   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算，及0.5元包装费。
+│   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算，及包装费。
 │   │</div></div>
