--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -5,7 +5,7 @@
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天。</div></div>
 │ │ └ 袋装
 │ │   ├ 重量：500克。
-│ │   └ 售价：12.5元/袋，含0.5元包装费。
+│ │   └ 售价：12.5元/袋，含收取的0.5元包装费。
 │ │</div></div>
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
@@ -14,5 +14,5 @@
 │ │ │ └ 保鲜期：4～2℃冷藏达5～7天，必要时可冷冻存储。</div></div>
 │ │ └ 袋装
 │ │   ├ 重量：500克。
-│ │   └ 售价：14.5元/袋，含0.5元包装费。
+│ │   └ 售价：14.5元/袋，含收取的0.5元包装费。
 │ │</div></div>
