--- a/_includes/tofu/product/a.html
+++ b/_includes/tofu/product/a.html
@@ -11,7 +11,7 @@
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">油豆腐</span><abbr class="hot" title="热销">热</abbr><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │ │ │ ├ 成分：黄豆<sub>非转基因</sub>、饮用水。
-│ │ │ ├ 配料：菜籽油<sub>非转基因</sub>、食盐<sub>无碘</sub>。
+│ │ │ ├ 辅料：菜籽油<sub>非转基因</sub>、食盐<sub>无碘</sub>。
 │ │ │ ├ 保鲜期：4～2℃冷藏达5～7天，必要时可冷冻存储。
 │ │ │ └ 保质期：未经过测试。</div></div>
 │ │ └ 袋装
