--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -5,5 +5,5 @@
 │   │ │ └ 保质期：未经过测试。</div></div>
 │   │ └ 盒装<sub>暂未上市</sub>
 │   │   ├ 重量：见包装。
-│   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算，及包装费。
+│   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算。
 │   │</div></div>
