--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ html, body {
 }
 
 body, pre {
-  font-family: 'dejavu sans mono', menlo, consolas, simsun, simkai, kaiti, simhei, serif;
+  font-family: 'dejavu sans mono', menlo, consolas, simsun, dengxian, simhei, serif;
   font-size: 15.4px;
   line-height: 1.185;
   margin: 0;
@@ -116,6 +116,7 @@ pre div {
 }
 
 .brand {
+  font-family: simsun, dengxian, simhei, serif;
   width: 100%;
   background-color: white;
   position: fixed;
