--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -1,8 +1,7 @@
 │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">老豆腐</span><div class="collapse-body">
 │   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │   │ │ ├ 成分：黄豆<sub>非转基因</sub>、饮用水。
-│   │ │ ├ 保鲜期：4～2℃冷藏约5～7天。
-│   │ │ └ 保质期：未经过测试。</div></div>
+│   │ │ └ 保鲜期：4～2℃冷藏约5～7天。</div></div>
 │   │ └ 盒装<sub>暂未上市</sub>
 │   │   ├ 重量：见包装。
 │   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算。
