--- a/_includes/tofu/sales/a.html
+++ b/_includes/tofu/sales/a.html
@@ -1,7 +1,7 @@
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">自营</span><div class="collapse-body">
   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">大理古城</span><div class="collapse-body">
   │ │ └ <em>暂无...</em></div></div>
-  │ ├ 银桥头铺村
+  │ ├ 银桥镇头铺村
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">在线</span><div class="collapse-body">
   │   └ 邮费需自理
   │     ├ 云南省
