--- a/_includes/tofu/product/b/a.html
+++ b/_includes/tofu/product/b/a.html
@@ -2,7 +2,7 @@
 │   │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基本信息</span><div class="collapse-body">
 │   │ │ ├ 成分：黄豆<sub>非转基因</sub>、饮用水。
 │   │ │ └ 保鲜期：4～2℃冷藏约5～7天。</div></div>
-│   │ └ 盒装<sub>暂未上市</sub>
+│   │ └ 袋装
 │   │   ├ 重量：见包装。
-│   │   └ 建议零售价：见包装；按<em>6元/500克</em>称重计算。
+│   │   └ 售价：见包装；按<em>6元/500克</em>称重计算。
 │   │</div></div>
