--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -66,7 +66,7 @@
 </head>
 <body>
   <div class="brand">
-    <div>&copy;<strong>布袋豆腐</strong><span style="font-size: 85%;">（2023-2024）</span></div>
+    <div>&copy;<strong>布袋豆腐</strong></div>
   </div>
   <div id="container">{{ content }}</div>
   <script>
