--- a/assets/main.scss
+++ b/assets/main.scss
@@ -147,6 +147,7 @@ pre {
   left: 0;
   right: 0;
   bottom: 0;
+  z-index: 10000;
   
   &:after {
     display: block;
@@ -263,7 +264,7 @@ pre {
 
 @media screen and (max-width: 800px) {
   body, pre {
-    font-size: 16px;
+    font-size: 12px;
   }
   
   .tofu {
