--- a/assets/main.scss
+++ b/assets/main.scss
@@ -201,7 +201,8 @@ pre {
   position: fixed;
   left: 0;
   right: 0;
-  bottom: 40px;
+  bottom: 25px;
+  z-index: 0;
   
   &:after {
     display: block;
