--- a/_includes/tofu/about.html
+++ b/_includes/tofu/about.html
@@ -1,5 +1,5 @@
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">关于</span><div class="collapse-body">
-│ ├ <a href="/buddha.html" target="_blank">布袋和尚简介↗</a>。
+│ ├ <a href="/buddha" target="_blank">布袋和尚简介↗</a>。
 │ ├ 生产商：大理市布袋食品加工坊。
 │ ├ 手机号：19542586219。
 │ └ 微信号：bdspjgf。
