--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer class="site-footer">
   <div class="wrapper">
-    <em style="color: green; font-weight: bold;">纯素产品，不含五辛。</em>
-    <a href="/inn" target="_blank">家庭民宿↗</a>
+    <em style="color: green; font-weight: bold; background-color: white;">纯素产品，不含五辛。</em>
+    <a href="/inn" target="_blank" style="background-color: white;">家庭民宿↗</a>
   </div>
 </footer>
