--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,7 @@
 }
 
 body {
-  font: 15px/1.185 'dejavu sans mono', menlo, consolas, simsun, dengxian, simhei, serif;
+  font: 15px/1.185 'dejavu sans mono', dengxian, simsun, simhei, serif;
   margin: 0;
   background-color: transparent;
 }
@@ -102,7 +102,7 @@ pre {
 }
 
 .site-header {
-  font-family: simsun, dengxian, simhei, serif;
+  font-family: dengxian, simsun, simhei, serif;
   width: 100%;
   position: fixed;
   top: 0;
