--- a/assets/main.scss
+++ b/assets/main.scss
@@ -54,7 +54,7 @@ dfn {
 }
 
 pre {
-  font: 15px/1.185 'dejavu sans mono', dengxian, simsun, simhei, serif;
+  font: 15px/1.185 'dejavu sans mono', menlo, consolas, dengxian, simsun, simhei, serif;
   white-space: pre;
   width: 100%;
   padding: 0;
@@ -170,7 +170,7 @@ pre {
 
   img {
     align-self: center;
-    width: 23.5%;
+    width: 18%;
     height: auto;
   }
 }
