--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer class="site-footer">
   <div class="wrapper">
-    <em style="color: green; font-weight: bold; background-color: white;">纯素产品，不含五辛。</em>
-    <a href="/inn" target="_blank" style="background-color: white;">家庭民宿↗</a>
+    <div><em style="color: green; font-weight: bold; background-color: white;">纯素产品，不含五辛。</em></div>
+    <div>电话/微信: 19542586219。</div>
+    <div><a href="/buddha">关于“布袋和尚”↗</a></div>
+    <div><a href="/inn">家庭民宿↗</a></div>
   </div>
 </footer>
